# stdlib-cmake-example

./: CMakeLists.txt  LICENSE  README.md
.github/workflows/: build.yml
app/: CMakeLists.txt  main.f90
config/: CMakeLists.txt
config/cmake/: Findfortran_stdlib.cmake  Findtest-drive.cmake
src/: CMakeLists.txt  example.f90
subprojects/: CMakeLists.txt
test/: CMakeLists.txt  main.f90  test_example.f90
